Rationalise sql db metadata. Add caching for length api calls
