# schema/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  vdjbase-api-openapi3.yaml
-#   timestamp: 2024-08-29T13:59:32+00:00
+#   timestamp: 2024-09-02T09:22:20+00:00
 
 from __future__ import annotations
 
@@ -33,6 +33,9 @@ class Locus(str, Enum):
 
 class Dataset(BaseModel):
     dataset: Optional[str] = Field(None, description='Name of the dataset in VDJbase')
+    revision_date: Optional[NaiveDatetime] = Field(
+        None, description='Date of the current revision of the dataset'
+    )
     locus: Optional[Locus] = Field(None, description='Gene locus it represents')
 
 
